--- a/springmvc-05-json/pom.xml
+++ b/springmvc-05-json/pom.xml
@@ -9,15 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springmvc-04-controller</artifactId>
+    <artifactId>springmvc-05-json</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
 </project>
