--- a/ssmbuild/pom.xml
+++ b/ssmbuild/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.1.9.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.13</version>
+        </dependency>
     </dependencies>
 
     <!-- 静态资源导出 -->
